examples/negative/pipes/pipe_wrong_signature/main.kai
# Issue #594 — exercise the "signature mismatch falls through to
# call-inference" path. The pipe rewrites to `badbox.map(b, f)` but
# `map`'s declared shape expects `(f, b)` so the unify reports the
# usual type-mismatch error against the qualified callee.

import badbox

fn main() : Int {
  let b = MkBox(7)
  let r = b | (n) => n + 1
  0
}
